[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/textures/ui/player_hud/empty.png" type="Texture" id=1]
[ext_resource path="res://assets/scripts/ui/player_hud/empty_hud.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "cycle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "flicker"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="label" type="Sprite"]
texture = ExtResource( 1 )
hframes = 4
script = ExtResource( 2 )

[node name="t" type="Tween" parent="."]

[node name="cycle" type="AnimationPlayer" parent="."]
autoplay = "cycle"
anims/RESET = SubResource( 1 )
anims/cycle = SubResource( 2 )

[node name="flicker" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/RESET = SubResource( 3 )
anims/flicker = SubResource( 4 )

[node name="despawn_timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="wait_timer" type="Timer" parent="."]
wait_time = 0.01
one_shot = true

[connection signal="timeout" from="despawn_timer" to="." method="_on_despawn_timer_timeout"]
[connection signal="timeout" from="wait_timer" to="." method="_on_Timer_timeout"]
